Zarosanas class added

--- a/Diena4/Diena4/Diena4.csproj
+++ b/Diena4/Diena4/Diena4.csproj
@@ -45,6 +45,7 @@
     <Compile Include="JaunaKlase1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Zarosanas.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
