--- a/Diena8/Diena8/Diena8.csproj
+++ b/Diena8/Diena8/Diena8.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CikluUzdevumi.cs" />
+    <Compile Include="Masivs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
